Fix layout shift when searching projects
This fix was originally implemented in c119f9c, but broke when moving to
NextJS because the page path is no longer exposed in the same way.

--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -7,8 +7,8 @@ $project-icon-width: 80px;
 }
 
 // Prevent scroll jumps when no results are returned from a project search
-body[data-page-slug='/'],
-body[data-page-slug='/projects/'] {
+main[data-page-path='/'],
+main[data-page-path='/projects'] {
   min-height: 1000px;
 }
 
